Logo Resize, Header, Footer & Description

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,10 @@ header .logo img {
         font-weight: bold;
     }
 
+    .description {
+        padding: 10px;
+    }
+
 /* Links */
 a {
     color: #000;
