--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,15 @@ header .logo img {
     .description {
         padding: 10px;
     }
+    .headings {
+        font-size: 2.5 rem;
+        color: #EC6010;
+        text-align: center; /* Centers the text horizontally */
+        padding: 0;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-weight: bold;
+    }
 
 /* Links */
 a {
